added mongodb search with nfc tag

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/puresick/imd_s4_autonomous_transportation#readme",
   "dependencies": {
     "mongodb": "^2.1.21",
-    "mqtt": "^1.10.0"
+    "mqtt": "^1.10.0",
+    "MFRC522-node": "1.0.5"
   }
 }
